# PDF-Watermark-Tool

./: .clang-format  CMakeLists.txt  DpiManager.cpp  DpiManager.h  FontFileSearch.cpp  PdfTool.cpp  PdfTool.h  PdfTool.qrc  PdfTool.rc  PdfTool.ui  PdfTool_zh_CN.qm  PdfTool_zh_CN.ts  README.md  README_EN.md  Thumbnail.cpp  Thumbnail.h  WatermarkInfo.h  WatermarkPreview.cpp  WatermarkPreview.h  WatermarkSetting.cpp  WatermarkSetting.h  WatermarkSetting.ui  main.cpp
.github/workflows/: cmake-single-platform.yml
pdfium/: PDFiumConfig.cmake
qss/: silvery.css
ttfsubset/: subttf.cpp  subttf.h
ttfsubset/sfntly/: font.cc
ttfsubset/sfntly/data/: font_data.cc  readable_font_data.cc  writable_font_data.cc
ttfsubset/sfntly/table/: header.cc
ttfsubset/sfntly/table/bitmap/: bitmap_size_table.cc  eblc_table.cc
ttfsubset/sfntly/table/core/: cmap_table.cc  name_table.cc  name_table.h
ttfsubset/subtly/: character_predicate.cc  character_predicate.h  font_assembler.cc  font_info.cc  merger.cc  stats.cc  subsetter.cc  subsetter.h  utils.cc  utils.h
